Обновлены шаблон index.html и класс WebController(добавлены поле и конструктор)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 
 <h1 th:text="${appName}">Название приложения</h1>
 <p th:text="${message}">Сообщение</p>
+<p>Книг в библиотеке: <span th:text="${bookCount}">0</span></p>
+<p>Сегодня: <span th:text="${currentDate}">2025-01-01</span></p>
 
 </body>
 </html>
